--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+	  "start:dev": "nodemon dist/app.js", 
+	  "build": "tsc && npm run",
+	  "build:dev": " npm run && tsc -w" 
   },
   "keywords": [],
   "author": "",
