--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "node dist/app.js",
 	  "start:dev": "nodemon dist/app.js", 
 	  "build": "tsc && npm run",
 	  "build:dev": " npm run && tsc -w" 
