--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/app.js",
 	  "start:dev": "nodemon dist/app.js", 
-	  "build": "tsc && npm run",
+	  "build": "tsc",
 	  "build:dev": " npm run && tsc -w" 
   },
   "keywords": [],
